# cuda-day-day

./: .gitignore  CMakeLists.txt  CUDA悟道指南.md  README.md  cuda_notes.md  cuda官方库介绍.md  ggml_notes.md  main.cpp  triton_notes.md  vllm_notes.md  优化方式速记.md  常用指标.md  随机.md
1.基于CUDA的异构并行计算/: main.cu
10.程序实现的注意事项/: CMakeLists.txt  bakeup.tmp  crypt.config.cu  crypt.constant.cu  crypt.flexible.book.cu  crypt.flexible.thread.cu  crypt.legacy.cu  crypt.openmp.cu  crypt.overlap.book.cu  crypt.overlap.cu  crypt.parallelized.cu  debug-hazards.cu  debug-segfault.cu  debug-segfault.fixed.cu  generate_data.c  generate_userkey.c  sumMatrixGPU.cu  sumMatrixGPU_nvToolsExt.cu
2.编程模型/: CMakeLists.txt  checkBestGPU  checkBestGPU.cu  checkDeviceInfor  checkDeviceInfor.cu  checkDimension  checkThreadIndex  checkThreadIndex.cu  defineGridBlock  defineGridBlock.cu  sumArraysOnGPU_small_case  sumArraysOnGPU_small_case.cu  sumArraysOnGPU_timer.cu  sumMatrixOnGPU-1D-grid-1D-block  sumMatrixOnGPU-1D-grid-1D-block.cu  sumMatrixOnGPU-2D-grid-1D-block  sumMatrixOnGPU-2D-grid-1D-block.cu  sumMatrixOnGPU-2D-grid-2D-block  sumMatrixOnGPU-2D-grid-2D-block.cu
3.执行模型/: CMakeLists.txt  nestedHelloWorld  nestedHelloWorld.cu  nestedReduce  nestedReduce.cu  nestedReduce2  nestedReduce2.cu  reduceInter  reduceInter.cu  simpleDivergence.cu  sumMatrix  sumMatrix.cu
4.全局内存/: CMakeLists.txt  globalVariable.cu  memTransfer.cu  pinMemTransfer.cu  readSegment.cu  readSegmentUnroll.cu  simpleMethAoS.cu  simpleMethSoA.cu  sumArrayZerocopy.cu  sumArrayZerocopyUVA.cu  sumMatrixGPUManaged.cu  sumMatrixGPUManual.cu  transpose.cu  writeSegment.cu
5.共享缓存和常量内存/: CMakeLists.txt  checkSmemRectangle.cu  checkSmemSquare.cu  common.cpp  common.h  constantReadOnly.cu  constantStencil.cu  reduceIntegerShfl.cu  reduceInter.cu  simpleShfl.cu  transposeRectangle.cu
6.流和并发/: CMakeLists.txt  asyncAPI.cu  common.h  simpleCallback.cu  simpleHyperqBreadth.cu  simpleHyperqDependence.cu  simpleHyperqDepth.cu  simpleHyperqOpenmp.cu  simpleMultiAddBreadth.cu  simpleMultiAddDepth.cu
7.调整指令级原语/: CMakeLists.txt  atomic-ordering.cu  common.cpp  floating-point-accuracy.cu  floating-point-perf.cu  fmad.cu  foo.cu  foo.ptx  intrinsic-standard-comp.cu  my-atomic-add.cu
8.GPU加速库和openACC/: CMakeLists.txt  common.cpp  cublas.cu  cuda-openacc.cu  cufft-multi.cu  cufft.cu  cusparse.cu  rand-kernel.cu  replace-rand-streams.cu  replace-rand.cu  simple-kernels.c
9.多GPU编程/: CMakeLists.txt  common.h  simple2DFD.cu  simpleMultiGPU.cu  simpleP2P_CUDA_Aware.c
CodeSample/chapter03/: Makefile  nestedReduce.cu  nestedReduce2.cu  sumMatrix
images/: CUDA悟道指南--调优指南.md
lesson_1/: main.cu
lesson_2/: checkDimension.cu  report1.nsys-rep  report1.sqlite  sumArraysOnGPU_small_case.cu  sumArraysOnGPU_timer.cu  sumArraysOnHost  sumarray  timer  util.cu
ops/: CMakeLists.txt  common.cpp  common.h
ops/reduce/: Makefile  reduce_v0_baseline.cu  reduce_v0_shared_mem.cu  reduce_v1_no_divergence_branch.cu  (+6 more)
ops/sgemm/: CMakeLists.txt  Makefile  opt_notes.md  sgemm_blas.cu  sgemm_v0_baseline.cu  sgemm_v1_shared_memory.cu  sgemm_v2_shared_memory_sliding_windows.cu  sgemm_v3_increase_work_of_per_thread.cu  sgemm_v4_using_float4.cu  sgemm_v5_register_outer_product.cu  sgemm_v6_register_outer_product_float4.cu  v3.cu
ops/universe_best_cuda_practice/: CMakeLists.txt
ops/universe_best_cuda_practice/1_cuda_reduce_study/: CMakeLists.txt  my_reduce_v0_global_memory.cu  my_reduce_v1_shared_memory.cu  my_reduce_v2_no_divergence_branch.cu  my_reduce_v3_no_bank_conflict.cu  my_reduce_v4_add_during_load_plan_a.cu  my_reduce_v4_add_during_load_plan_b.cu  my_reduce_v5_unroll_last_warp.cu  my_reduce_v6_completely_unroll.cu  my_reduce_v7_mutli_add.cu  my_reduce_v8_shuffle.cu
ops/universe_best_cuda_practice/2_cuda_sgemm_study/: CMakeLists.txt  my_sgemm_v0_global_memory.cu  my_sgemm_v1_shared_memory.cu  my_sgemm_v2_shared_memory_sliding_windows.cu  my_sgemm_v3_increase_work_of_per_thread.cu  my_sgemm_v4_using_float4.cu  my_sgemm_v5_register_outer_product.cu  my_sgemm_v6_register_outer_product_float4.cu  my_sgemm_v7_A_smem_transpose.cu  my_sgemm_v8_double_buffer.cu
ops/universe_best_cuda_practice/3_kernel_profiling_guide/: CMakeLists.txt  my_transpose.cu  my_transpose_v2_float4.cu  my_transpose_v3_float2.cu  my_transpose_v4_float2_1x2.cu  my_transpose_v5_shared_memory.cu  my_transpose_v6_no_bank_conflict.cu  my_transpose_v7_increase_work_of_per_thread.cu  roofline_model.cu  transpose.cu
ops/universe_best_cuda_practice/4_tensor_core_wmma/: CMakeLists.txt  hgemm_v1_wmma_m16n16k16_naive_kernel.cu  hgemm_v2_wmma_m16n16k16_mma4x2_kernel.cu  hgemm_v3_wmma_m16n16k16_mma4x2_warp2x4_kernel.cu  hgemm_v4_wmma_m16n16k16_mma4x2_warp2x4_dbuf_async_kernel.cu
ops/universe_best_cuda_practice/4_tensor_core_wmma/common/: tester.h
ops/universe_best_cuda_practice/5_mma_and_swizzle/: CMakeLists.txt  hgemm_v1_mma_m16n8k16_naive_kernel.cu  v1_simple_wmma.cu  v2_shared_memory_wmma.cu  v3_shared_memory_wmma_padding.cu  v4_shared_memory_mma.cu  v5_shared_memory_mma_swizzle.cu
ops/universe_best_cuda_practice/5_mma_and_swizzle/common/: tester.h
ops/universe_best_cuda_practice/6_cutlass_study/: CMakeLists.txt  v1_print_half.cu  v2_gemm_kernel.cu  v3_turing_tensorop_gemm.cu
ops/universe_best_cuda_practice/flash_attention/: CMakeLists.txt  example-app.cpp  flash-atten-main.cpp  flash.cu  my_flash.cu  softmax.cpp
src/: main.cu
tensor-core/: CMakeLists.txt  multi.cu
思维导图/: 1.异构并行计算.xmind  10.注意事项.xmind  2.CUDA编程模型.xmind  3.CUDA执行模型.xmind  4.全局内存模型.xmind  5.共享内存和常量内存.xmind  6.流和并发.xmind  7.调整指令级原语.xmind  8.GPU加速库和OpenACC.xmind  9.多GPU编程.xmind  CUDA执行模型.xmind  CUDA编程模型.xmind  GPU加速库和OpenACC.xmind  全局内存模型.xmind  共享内存和常量内存.xmind  内存和缓存.xmind  异构并行计算.xmind  流和并发.xmind  调整指令级原语.xmind
执行模型/: common.cu  common.cuh  sumMatrixOnGPU-2D-grid-2D-block.cu
编程模型/: checkBestGPU.cu  checkDeviceInfor.cu  checkThreadIndex.cu  common.cu  defineGridBlock.cu  sumArraysOnGPU_small_case.cu  sumArraysOnHost.c  sumMatrixOnGPU-1D-grid-1D-block.cu  sumMatrixOnGPU-2D-grid-1D-block.cu  sumMatrixOnGPU-2D-grid-2D-block.cu
(+7 files in other folders)
