# 构建可执行文件
add_executable(checkBestGPU checkBestGPU.cu)
add_executable(checkDeviceInfor checkDeviceInfor.cu)
add_executable(checkDimension checkDimension.cu)
add_executable(checkThreadIndex checkThreadIndex.cu)
add_executable(defineGridBlock defineGridBlock.cu)
add_executable(sumArraysOnGPU_small_case sumArraysOnGPU_small_case.cu)
add_executable(sumArraysOnGPU_timer sumArraysOnGPU_timer.cu)
add_executable(sumArraysOnHost sumArraysOnHost.c)
add_executable(sumMatrixOnGPU-2D-grid-1D-block sumMatrixOnGPU-2D-grid-1D-block.cu)
add_executable(sumMatrixOnGPU-1D-grid-1D-block sumMatrixOnGPU-1D-grid-1D-block.cu)
add_executable(sumMatrixOnGPU-2D-grid-2D-block sumMatrixOnGPU-2D-grid-2D-block.cu)