

# add_executable(memTransfer memTransfer.cu ${COMMON_FILES})
# add_executable(pinMemTransfer pinMemTransfer.cu ${COMMON_FILES})
# add_executable(sumArrayZerocopy sumArrayZerocopy.cu ${COMMON_FILES})
# add_executable(sumArrayZerocopyUVA sumArrayZerocopyUVA.cu ${COMMON_FILES})
# add_executable(readSegment readSegment.cu ${COMMON_FILES})
# add_executable(writeSegment writeSegment.cu ${COMMON_FILES})
# add_executable(simpleMethAoS simpleMethAoS.cu ${COMMON_FILES})
# add_executable(simpleMethSoA simpleMethSoA.cu ${COMMON_FILES})
# add_executable(readSegmentUnroll readSegmentUnroll.cu ${COMMON_FILES})
# add_executable(transpose transpose.cu ${COMMON_FILES})
# add_executable(sumMatrixGPUManaged sumMatrixGPUManaged.cu ${COMMON_FILES})
# add_executable(sumMatrixGPUManual sumMatrixGPUManual.cu ${COMMON_FILES})
add_executable(globalVariable globalVariable.cu ${COMMON_FILES})
