

add_executable(atomic-ordering atomic-ordering.cu  ${COMMON_FILES})
add_executable(floating-point-accuracy floating-point-accuracy.cu  ${COMMON_FILES})
add_executable(floating-point-perf floating-point-perf.cu  ${COMMON_FILES})
add_executable(fmad fmad.cu ${COMMON_FILES})
add_executable(intrinsic-standard-comp intrinsic-standard-comp.cu ${COMMON_FILES})
add_executable(my-atomic-add my-atomic-add.cu ${COMMON_FILES})
# if(CMAKE_BUILD_TYPE STREQUAL "Debug")
#     target_compile_options(my-atomic-add PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
# endif()