
add_executable(v1_simple_wmma v1_simple_wmma.cu)
target_link_libraries(v1_simple_wmma PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(v1_simple_wmma PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
else()
    target_compile_options(v1_simple_wmma PRIVATE -lineinfo)
endif()

add_executable(v2_shared_memory_wmma v2_shared_memory_wmma.cu)
target_link_libraries(v2_shared_memory_wmma PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(v2_shared_memory_wmma PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
else()
    target_compile_options(v2_shared_memory_wmma PRIVATE -lineinfo)
endif()

add_executable(hgemm_v1_mma_m16n8k16_naive_kernel hgemm_v1_mma_m16n8k16_naive_kernel.cu)
target_link_libraries(hgemm_v1_mma_m16n8k16_naive_kernel PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(hgemm_v1_mma_m16n8k16_naive_kernel PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
else()
    target_compile_options(hgemm_v1_mma_m16n8k16_naive_kernel PRIVATE -lineinfo)
endif()

add_executable(v3_shared_memory_wmma_padding v3_shared_memory_wmma_padding.cu)
target_link_libraries(v3_shared_memory_wmma_padding PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(v3_shared_memory_wmma_padding PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
else()
    target_compile_options(v3_shared_memory_wmma_padding PRIVATE -lineinfo)
endif()


add_executable(v4_shared_memory_mma v4_shared_memory_mma.cu)
target_link_libraries(v4_shared_memory_mma PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(v4_shared_memory_mma PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
else()
    target_compile_options(v4_shared_memory_mma PRIVATE -lineinfo)
endif()

add_executable(v5_shared_memory_mma_swizzle v5_shared_memory_mma_swizzle.cu)
target_link_libraries(v5_shared_memory_mma_swizzle PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(v5_shared_memory_mma_swizzle PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
else()
    target_compile_options(v5_shared_memory_mma_swizzle PRIVATE -lineinfo)
endif()