set(CUTLASS_PATH "/home/hongkailin/cutlass/include/")
set(CUTLASS_UTIL_PATH "/home/hongkailin/cutlass/tools/util/include")
set(CUTLASS_NVCC_ARCHS 89)
set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --expt-relaxed-constexpr")

add_executable(v1_print_half v1_print_half.cu)
target_link_libraries(v1_print_half PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
target_include_directories(v1_print_half PRIVATE ${CUTLASS_PATH})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(v1_print_half PRIVATE  $<$<COMPILE_LANGUAGE:CUDA>:$<$<CONFIG:Debug>:-O0 -G>>)
else()
    target_compile_options(v1_print_half PRIVATE -lineinfo)
endif()

add_executable(v2_gemm_kernel v2_gemm_kernel.cu)
target_link_libraries(v2_gemm_kernel PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
target_include_directories(v2_gemm_kernel PRIVATE ${CUTLASS_PATH} ${CUTLASS_UTIL_PATH})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(v2_gemm_kernel PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
else()
    target_compile_options(v2_gemm_kernel PRIVATE -lineinfo)
endif()

add_executable(v3_turing_tensorop_gemm v3_turing_tensorop_gemm.cu)
target_link_libraries(v3_turing_tensorop_gemm PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
target_include_directories(v3_turing_tensorop_gemm PRIVATE ${CUTLASS_PATH} ${CUTLASS_UTIL_PATH})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(v3_turing_tensorop_gemm PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-g -G>)
else()
    target_compile_options(v3_turing_tensorop_gemm PRIVATE -lineinfo)
endif()
target_compile_options(v3_turing_tensorop_gemm PRIVATE -O0)